force-app/main/default/objects/BMCServiceDesk__QuickLink__c/BMCServiceDesk__QuickLink__c.object-meta.xml
<CustomObject>
    <description>Quick Links portlet for SS</description>
    <label>QuickLink</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>QuickLink Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickLinks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>