force-app/main/default/objects/BMCServiceDesk__QuickLink__c/fields/BMCServiceDesk__Permanent__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Permanent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Link is permanent or not</description>
    <label>Permanent</label>
    <type>Checkbox</type>
</CustomField>