force-app/main/default/objects/BMCServiceDesk__QuickLink__c/fields/BMCServiceDesk__URL__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__URL__c</fullName>
    <description>URL field for QuickLink</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>