force-app/main/default/objects/BMCServiceDesk__QuickLink__c/fields/BMCServiceDesk__URL_Order__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__URL_Order__c</fullName>
    <description>Order of URL</description>
    <label>URL Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>