force-app/main/default/objects/BMCServiceDesk__QuickLink__c/validationRules/BMCServiceDesk__LinkName_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__LinkName_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL(BMCServiceDesk__LinkName__c) , ISBLANK(BMCServiceDesk__LinkName__c))</errorConditionFormula>
    <errorMessage>Please enter Name.</errorMessage>
</ValidationRule>